[package]
name = "dau"
version = "0.1.0"
authors = ["Steve Smith <tarkasteve@gmail.com>"]
edition = "2018"

[features]
auto_groups = []

[dependencies]
anyhow = "1.0.31"
cfg-if = "0.1.10"
libc = "0.2.71"
log = "0.4.8"
pam = "0.7.0"
rpassword = "4.0.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
simplelog = "0.8.0"
structopt = "0.3.15"
thiserror = "1.0.20"
toml = "0.5.6"

[dev-dependencies]
escargot = "0.5.0"
tempfile = "3.1.0"
test-case = "1.0.0"
