[package]
name = "dau"
version = "0.1.0"
authors = ["Steve Smith <tarkasteve@gmail.com>"]
edition = "2018"

[features]
auto_groups = []

[dependencies]
anyhow = "1.0.42"
cfg-if = "1.0.0"
libc = "0.2.98"
log = "0.4.14"
pam = "0.7.0"
rpassword = "5.0.1"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
simplelog = "0.10.0"
structopt = "0.3.22"
thiserror = "1.0.26"
toml = "0.5.8"

[dev-dependencies]
escargot = "0.5.2"
tempfile = "3.2.0"
test-case = "1.2.0"
